Fixed jarring top-gap on wide-displays

--- a/src/stylings/main.scss
+++ b/src/stylings/main.scss
@@ -55,7 +55,7 @@
 		scale: 290% 340%;
 		transform-origin: left top;
 
-		margin-bottom: -15%;
+		margin-bottom: -18vh;
 	}
 
 	/*
